更新index.html，添加所有子系统大屏页面的链接

--- a/index.html
+++ b/index.html
@@ -74,11 +74,14 @@
                     <h3 class="text-xl font-semibold mb-2">智慧电商</h3>
                     <p class="text-gray-600 mb-4">电子商务大数据分析</p>
                     <div class="grid grid-cols-1 gap-2">
-                        <a href="智慧电商/电子商务公共服务平台大数据中心/scripts/china.js" class="bg-purple-500 hover:bg-purple-600 text-white py-2 px-4 rounded transition duration-300">
+                        <a href="智慧电商/电子商务公共服务平台大数据中心/index.html" class="bg-purple-500 hover:bg-purple-600 text-white py-2 px-4 rounded transition duration-300">
                             电子商务平台
                         </a>
                         <a href="智慧电商/运营大数据/index.html" class="bg-purple-500 hover:bg-purple-600 text-white py-2 px-4 rounded transition duration-300">
                             运营大数据
+                        </a>
+                        <a href="智慧电商/销售大数据页面模板/index.html" class="bg-purple-500 hover:bg-purple-600 text-white py-2 px-4 rounded transition duration-300">
+                            销售大数据分析
                         </a>
                     </div>
                 </div>
@@ -117,6 +120,12 @@
                         <a href="智慧政务/综合分析平台/pages/index.html" class="bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-4 rounded transition duration-300">
                             综合分析平台
                         </a>
+                        <a href="智慧政务/工商办税大数据监控平台/index.html" class="bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-4 rounded transition duration-300">
+                            工商办税监控平台
+                        </a>
+                        <a href="智慧政务/舆情分析/public.html" class="bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-4 rounded transition duration-300">
+                            舆情分析平台
+                        </a>
                     </div>
                 </div>
             </div>
@@ -151,6 +160,9 @@
                         <a href="智慧运维/大数据统计展示大屏/index.html" class="bg-indigo-500 hover:bg-indigo-600 text-white py-2 px-4 rounded transition duration-300">
                             大数据统计展示
                         </a>
+                        <a href="智慧运维/大数据运维总览图/index.html" class="bg-indigo-500 hover:bg-indigo-600 text-white py-2 px-4 rounded transition duration-300">
+                            大数据运维总览
+                        </a>
                     </div>
                 </div>
             </div>
@@ -164,6 +176,54 @@
                     <div class="grid grid-cols-1 gap-2">
                         <a href="智慧城市/大数据可视化展板通用模板/index.html" class="bg-pink-500 hover:bg-pink-600 text-white py-2 px-4 rounded transition duration-300">
                             大数据可视化展板
+                        </a>
+                        <a href="智慧城市/智慧工地/index.html" class="bg-pink-500 hover:bg-pink-600 text-white py-2 px-4 rounded transition duration-300">
+                            智慧工地
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 智慧物联 -->
+            <div class="card bg-white rounded-lg overflow-hidden shadow-lg">
+                <div class="p-6 text-center">
+                    <span class="material-icons text-teal-600 mb-4">devices</span>
+                    <h3 class="text-xl font-semibold mb-2">智慧物联</h3>
+                    <p class="text-gray-600 mb-4">物联网大数据平台</p>
+                    <div class="grid grid-cols-1 gap-2">
+                        <a href="智慧物联/新能源车联网综合大数据平台/index.html" class="bg-teal-500 hover:bg-teal-600 text-white py-2 px-4 rounded transition duration-300">
+                            新能源车联网大数据
+                        </a>
+                        <a href="智慧物联/物联网平台数据统计/index.html" class="bg-teal-500 hover:bg-teal-600 text-white py-2 px-4 rounded transition duration-300">
+                            物联网平台数据统计
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 智慧运营 -->
+            <div class="card bg-white rounded-lg overflow-hidden shadow-lg">
+                <div class="p-6 text-center">
+                    <span class="material-icons text-orange-600 mb-4">trending_up</span>
+                    <h3 class="text-xl font-semibold mb-2">智慧运营</h3>
+                    <p class="text-gray-600 mb-4">运营数据监控分析</p>
+                    <div class="grid grid-cols-1 gap-2">
+                        <a href="智慧运营/厅店效能大屏监控看板/page/index.html" class="bg-orange-500 hover:bg-orange-600 text-white py-2 px-4 rounded transition duration-300">
+                            厅店效能监控看板
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 智慧金融 -->
+            <div class="card bg-white rounded-lg overflow-hidden shadow-lg">
+                <div class="p-6 text-center">
+                    <span class="material-icons text-blue-800 mb-4">account_balance_wallet</span>
+                    <h3 class="text-xl font-semibold mb-2">智慧金融</h3>
+                    <p class="text-gray-600 mb-4">金融风险监测分析</p>
+                    <div class="grid grid-cols-1 gap-2">
+                        <a href="智慧金融/银行企业信用风险实时监测/index.html" class="bg-blue-800 hover:bg-blue-900 text-white py-2 px-4 rounded transition duration-300">
+                            企业信用风险监测
                         </a>
                     </div>
                 </div>
