在首页添加指向web文件夹中数字大屏的跳转链接

--- a/index.html
+++ b/index.html
@@ -230,6 +230,161 @@
             </div>
         </div>
 
+        <header class="text-center my-12">
+            <h2 class="text-3xl font-bold text-white mb-4">网站大屏展示</h2>
+            <p class="text-xl text-white opacity-80">选择下面的大屏进行查看</p>
+        </header>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
+            <!-- 医疗大数据 -->
+            <div class="card bg-white rounded-lg overflow-hidden shadow-lg">
+                <div class="p-6 text-center">
+                    <span class="material-icons text-red-600 mb-4">health_and_safety</span>
+                    <h3 class="text-xl font-semibold mb-2">医疗大数据</h3>
+                    <p class="text-gray-600 mb-4">医疗健康监测平台</p>
+                    <div class="grid grid-cols-1 gap-2">
+                        <a href="web/023 医院大数据展示/index.html" class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded transition duration-300">
+                            医院大数据展示
+                        </a>
+                        <a href="web/103 人口增长对医疗影响可视化分析/index.html" class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded transition duration-300">
+                            医疗影响分析
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 疫情监控 -->
+            <div class="card bg-white rounded-lg overflow-hidden shadow-lg">
+                <div class="p-6 text-center">
+                    <span class="material-icons text-purple-600 mb-4">coronavirus</span>
+                    <h3 class="text-xl font-semibold mb-2">疫情监控</h3>
+                    <p class="text-gray-600 mb-4">疫情实时监测平台</p>
+                    <div class="grid grid-cols-1 gap-2">
+                        <a href="web/006 全国疫情实时监控/index.html" class="bg-purple-500 hover:bg-purple-600 text-white py-2 px-4 rounded transition duration-300">
+                            全国疫情实时监控
+                        </a>
+                        <a href="web/100 新型冠状肺炎实时监测大屏/index.html" class="bg-purple-500 hover:bg-purple-600 text-white py-2 px-4 rounded transition duration-300">
+                            新型冠状肺炎监测
+                        </a>
+                        <a href="web/010 双数智慧公卫-传染病督导平台/index.html" class="bg-purple-500 hover:bg-purple-600 text-white py-2 px-4 rounded transition duration-300">
+                            传染病督导平台
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 金融大数据 -->
+            <div class="card bg-white rounded-lg overflow-hidden shadow-lg">
+                <div class="p-6 text-center">
+                    <span class="material-icons text-green-600 mb-4">payments</span>
+                    <h3 class="text-xl font-semibold mb-2">金融大数据</h3>
+                    <p class="text-gray-600 mb-4">金融数据可视化</p>
+                    <div class="grid grid-cols-1 gap-2">
+                        <a href="web/108 银行数据可视化/index.html" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded transition duration-300">
+                            银行数据可视化
+                        </a>
+                        <a href="web/045 信用风险定位系统(银行版)/index.html" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded transition duration-300">
+                            信用风险定位系统
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 设备监测 -->
+            <div class="card bg-white rounded-lg overflow-hidden shadow-lg">
+                <div class="p-6 text-center">
+                    <span class="material-icons text-blue-600 mb-4">sensors</span>
+                    <h3 class="text-xl font-semibold mb-2">设备监测</h3>
+                    <p class="text-gray-600 mb-4">设备环境监测平台</p>
+                    <div class="grid grid-cols-1 gap-2">
+                        <a href="web/026 设备环境监测平台/index.html" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-300">
+                            设备环境监测平台
+                        </a>
+                        <a href="web/064 设备环境监测平台/index.html" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition duration-300">
+                            设备环境监测平台(备用)
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 教育大数据 -->
+            <div class="card bg-white rounded-lg overflow-hidden shadow-lg">
+                <div class="p-6 text-center">
+                    <span class="material-icons text-yellow-600 mb-4">school</span>
+                    <h3 class="text-xl font-semibold mb-2">教育大数据</h3>
+                    <p class="text-gray-600 mb-4">教育数据分析平台</p>
+                    <div class="grid grid-cols-1 gap-2">
+                        <a href="web/101 校情数据综合分析平台/index.html" class="bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-4 rounded transition duration-300">
+                            校情数据综合分析
+                        </a>
+                        <a href="web/107 上海XX大学迎新实时大数据看板/index.html" class="bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-4 rounded transition duration-300">
+                            大学迎新实时看板
+                        </a>
+                        <a href="web/116 学生综合成绩评价系统大屏/index.html" class="bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-4 rounded transition duration-300">
+                            学生成绩评价系统
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 智能大屏 -->
+            <div class="card bg-white rounded-lg overflow-hidden shadow-lg">
+                <div class="p-6 text-center">
+                    <span class="material-icons text-indigo-600 mb-4">dashboard</span>
+                    <h3 class="text-xl font-semibold mb-2">智能大屏</h3>
+                    <p class="text-gray-600 mb-4">数据可视化平台</p>
+                    <div class="grid grid-cols-1 gap-2">
+                        <a href="web/003 酷炫智能大屏数据中心/index.html" class="bg-indigo-500 hover:bg-indigo-600 text-white py-2 px-4 rounded transition duration-300">
+                            酷炫智能大屏数据中心
+                        </a>
+                        <a href="web/069 智能看板新中心/index.html" class="bg-indigo-500 hover:bg-indigo-600 text-white py-2 px-4 rounded transition duration-300">
+                            智能看板新中心
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 大数据模板 -->
+            <div class="card bg-white rounded-lg overflow-hidden shadow-lg">
+                <div class="p-6 text-center">
+                    <span class="material-icons text-pink-600 mb-4">template_count_chart</span>
+                    <h3 class="text-xl font-semibold mb-2">大数据模板</h3>
+                    <p class="text-gray-600 mb-4">通用大数据可视化模板</p>
+                    <div class="grid grid-cols-1 gap-2">
+                        <a href="web/011 大数据可视化系统数据分析通用模版/index.html" class="bg-pink-500 hover:bg-pink-600 text-white py-2 px-4 rounded transition duration-300">
+                            大数据可视化通用模板
+                        </a>
+                        <a href="web/025 大数据可视化展板通用模板/index.html" class="bg-pink-500 hover:bg-pink-600 text-white py-2 px-4 rounded transition duration-300">
+                            大数据可视化展板模板
+                        </a>
+                        <a href="web/050 大数据可视化展示平台通用模板/index.html" class="bg-pink-500 hover:bg-pink-600 text-white py-2 px-4 rounded transition duration-300">
+                            大数据可视化展示平台
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 统计展示 -->
+            <div class="card bg-white rounded-lg overflow-hidden shadow-lg">
+                <div class="p-6 text-center">
+                    <span class="material-icons text-cyan-600 mb-4">bar_chart</span>
+                    <h3 class="text-xl font-semibold mb-2">统计展示</h3>
+                    <p class="text-gray-600 mb-4">大数据统计展示</p>
+                    <div class="grid grid-cols-1 gap-2">
+                        <a href="web/056 大数据统计展示大屏/index.html" class="bg-cyan-500 hover:bg-cyan-600 text-white py-2 px-4 rounded transition duration-300">
+                            大数据统计展示大屏
+                        </a>
+                        <a href="web/057 大屏数据统计/index.html" class="bg-cyan-500 hover:bg-cyan-600 text-white py-2 px-4 rounded transition duration-300">
+                            大屏数据统计
+                        </a>
+                        <a href="web/058 大屏数据智慧中心统计/index.html" class="bg-cyan-500 hover:bg-cyan-600 text-white py-2 px-4 rounded transition duration-300">
+                            大屏数据智慧中心统计
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <footer class="mt-12 text-center text-white opacity-80">
             <p>© 2023 大数据可视化平台 - 所有子系统快速导航</p>
         </footer>
